--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "framer-motion": "^7.5.3",
