Added page transition effect

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "this": "next build && next export"
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^4.2.0",
